--- a/Conciliacao/webapp/Web.config
+++ b/Conciliacao/webapp/Web.config
@@ -24,7 +24,8 @@
   </appSettings>
 
   <connectionStrings>
-    <add connectionString="server=172.31.255.215;UId=root;Pwd=M4n4g3rMySQL#;database=conciliador;Port=3306;Allow User Variables=True" name="conexao_base_server" />
+    <!-- <add connectionString="server=172.31.255.215;UId=root;Pwd=M4n4g3rMySQL#;database=conciliador;Port=3306;Allow User Variables=True" name="conexao_base_server" /> -->
+    <add connectionString="server=200.198.176.210;UId=root;Pwd=M4n4g3rMySQL#;database=conciliador;Port=3306;Allow User Variables=True" name="conexao_base_server" />
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
