--- a/Conciliacao/ConciliacaoApi/Web.config
+++ b/Conciliacao/ConciliacaoApi/Web.config
@@ -10,11 +10,14 @@
   </configSections>
     <connectionStrings>
 
-      <add connectionString="server=172.31.255.215;UId=root;Pwd=M4n4g3rMySQL#;database=conciliador;Port=3306;Allow User Variables=True" name="conexao_base_server" />
-      <!--<add connectionString="server=localhost;UId=root;Pwd=hm1722+#();database=conciliador;Port=8080;Allow User Variables=True" name="conexao_base_server" />-->
-      <!--<add connectionString="server=localhost;UId=root;Pwd=hm1722+#();database=conciliador;Port=8080;Allow User Variables=True" name="conexao_base_server" />-->
-    <!--  <add connectionString="server=172.31.255.215;UId=root;Pwd=M4n4g3rMySQL#;database=conciliador;Port=3306;Allow User Variables=True" name="conexao_base_server" /> -->
-      <!-- add name="conexao_base_local" connectionString="server=mysql873.umbler.com;UId=nextfisio;Pwd=hm1722+#();database=nextfisio;Port=41890" / -->
+      <!--<add connectionString="server=172.31.255.215;UId=root;Pwd=M4n4g3rMySQL#;database=conciliador;Port=3306;Allow User Variables=True" name="conexao_base_server"/> -->
+      <!--<add connectionString="server=localhost;UId=root;Pwd=hm1722+#();database=conciliador;Port=8080;Allow User Variables=True" name="conexao_base_server"/>-->
+      <!--<add connectionString="server=localhost;UId=root;Pwd=hm1722+#();database=conciliador;Port=8080;Allow User Variables=True" name="conexao_base_server"/>-->
+      <!--<add name="conexao_base_local" connectionString="server=mysql873.umbler.com;UId=nextfisio;Pwd=hm1722+#();database=nextfisio;Port=41890"/> -->
+
+      <add connectionString="server=200.198.176.210;UId=root;Pwd=M4n4g3rMySQL#;database=conciliador;Port=3306;Allow User Variables=True" name="conexao_base_server" />
+
+
     </connectionStrings>
   <appSettings />
   <!--
