--- a/Conciliacao/webapp/Conciliacao.csproj
+++ b/Conciliacao/webapp/Conciliacao.csproj
@@ -592,6 +592,7 @@
     <Compile Include="Models\AdministradoraTypes.cs" />
     <Compile Include="Models\Banese\ConciliacaoBaneseDesmontar.cs" />
     <Compile Include="Models\Bin\ConciliacaoBinDesmontar.cs" />
+    <Compile Include="Models\GetNet\ConciliacaoGetNetDesmontar.cs" />
     <Compile Include="Models\MovimentacaoTypes.cs" />
     <Compile Include="Models\CartaoTypes.cs" />
     <Compile Include="Models\BancoTypes.cs" />
